Update some versions for jdk8