@@ -1,5 +1,6 @@
-v1.2.4 Extract picrate examples to ~/projects/examples instead of ~/picrate_samples for tighter integration with geany editor. Remove non-functioning sound library as an install option (direct toward minim as option).
+v1.3.0 Last version for jdk8. But should run OK jdk11 with JRuby-9.2.11.0 and --add-opens in ~/.jruby.java_opts to suppress reflective access warnings.
 
+v1.2.4 Extract picrate examples to ~/projects/examples instead of ~/picrate_samples for tighter integration with geany editor. Remove non-functioning sound library as an install option (direct toward minim as option).
 v1.2.3 Favor latest beta Video2 library over GLVideo.
 
 v1.2.2 Removed landscape from example as too taxing for raspberryPI. Improved geany tools.
